--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!-- Hero Section -->
     <header class="hero-section">
       <video autoplay muted loop class="background-video">
-        <source src="smoke.mp4" type="video/mp4" />
+        <source src="waves.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
       <nav class="navbar">
@@ -23,10 +24,34 @@
       <div class="hero-content">
         <h1>Leander Angst</h1>
         <p>
-          Hi! I'm a London based product designer.<br />I love finding simple
+          Hi! I'm a London-based product designer.<br />I love finding simple
           solutions to complex problems.
         </p>
       </div>
     </header>
+
+    <!-- Quote Section -->
+    <section class="quote-section">
+      <p>
+        Great design should aspire to feel obvious, like there was never a
+        better way to do it.
+      </p>
+    </section>
+
+    <!-- My Work Section -->
+    <section class="work-section">
+      <h2>My Work</h2>
+      <div class="work-container">
+        <div class="portfolio-item">
+          <img src="project1.jpg" alt="Project 1" />
+          <p>Packfleet</p>
+        </div>
+        <div class="portfolio-item">
+          <img src="project2.jpg" alt="Project 2" />
+          <p>Octopus Energy</p>
+        </div>
+        <!-- Add more projects as needed -->
+      </div>
+    </section>
   </body>
 </html>
